force-app/main/default/objects/SBQQ__RelatedContent__c/fields/SBQQ__DisplayOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>The order in which this item will appear to a sales user in the Related Content menu. If blank, the content will be sorted last.</description>
        <inlineHelpText>Set the order in which this item will appear to a sales user in the Related Content menu. If blank, the content will be sorted last.</inlineHelpText>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>