force-app/main/default/objects/SBQQ__RelatedContent__c/fields/SBQQ__DocumentName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DocumentName__c</fullName>
        <description>This contains the file name for the related content.</description>
        <formula>IF(((LEFT(SBQQ__ExternalId__c , 3)  = &#39;015&#39;) || (LEFT(SBQQ__ExternalId__c , 3)  = &#39;00P&#39;)), HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; SBQQ__ExternalId__c, &quot;View Document in New Window&quot;), 
IF(LEFT(SBQQ__ExternalId__c , 3)  = &#39;069&#39;, HYPERLINK(&quot;/sfc/#version?selectedDocumentId=&quot; &amp; SBQQ__ExternalId__c, &quot;View Content Workspace in New Window&quot;),
&quot;Not Document or workspace ID Specified&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter a file name for the related content.</inlineHelpText>
        <label>Document Name</label>
        <type>Text</type>
    </CustomField>