force-app/main/default/objects/SBQQ__RelatedContent__c/fields/SBQQ__ExternalId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ExternalId__c</fullName>
        <description>ID of the record that contains the actual content. Eg: Document or Salesforce Content.</description>
        <inlineHelpText>Record ID that contains the content, such as document or Salesforce content.</inlineHelpText>
        <label>External Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>