force-app/main/default/objects/SBQQ__RelatedContent__c/fields/SBQQ__Opportunity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity related to this content.</description>
        <inlineHelpText>Opportunity related to this content.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Additional Documents</relationshipLabel>
        <relationshipName>Additional_Documents</relationshipName>
        <type>Lookup</type>
    </CustomField>