force-app/main/default/objects/SBQQ__RelatedContent__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product related to this content.</description>
        <inlineHelpText>Product related to this content.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Additional Documents</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </CustomField>