force-app/main/default/objects/SBQQ__RelatedContent__c/fields/SBQQ__Quote__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote related to this content.</description>
        <inlineHelpText>Quote related to this content.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipName>RelatedContent</relationshipName>
        <type>Lookup</type>
    </CustomField>