force-app/main/default/objects/SBQQ__RelatedContent__c/fields/SBQQ__QuoteTemplate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template related to this content.</description>
        <inlineHelpText>Template related to this content.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Additional Documents</relationshipLabel>
        <relationshipName>ProductContent</relationshipName>
        <type>Lookup</type>
    </CustomField>