force-app/main/default/objects/SBQQ__RelatedContent__c/fields/SBQQ__Required__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this content as required for this product.</description>
        <inlineHelpText>Select the checkbox if this content is required for the product. Users must include it when generating a quote document.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </CustomField>