force-app/main/default/objects/SBQQ__RelatedContent__c/fields/SBQQ__TemplateSection__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TemplateSection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template Section related to this content.</description>
        <inlineHelpText>Template Section related to this content.</inlineHelpText>
        <label>Template Section</label>
        <referenceTo>SBQQ__TemplateSection__c</referenceTo>
        <relationshipLabel>Additional Documents</relationshipLabel>
        <relationshipName>RelatedContent</relationshipName>
        <type>Lookup</type>
    </CustomField>