force-app/main/default/objects/SBQQ__RelatedContent__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__DisplayOrder__c</columns>
        <columns>SBQQ__DocumentName__c</columns>
        <columns>SBQQ__ExternalId__c</columns>
        <columns>SBQQ__Product__c</columns>
        <columns>SBQQ__Quote__c</columns>
        <columns>SBQQ__QuoteTemplate__c</columns>
        <columns>SBQQ__Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>